Fix line breaks on comments.

--- a/src/app/course/comments/comments.component.scss
+++ b/src/app/course/comments/comments.component.scss
@@ -51,7 +51,7 @@ mat-list-item {
     position: relative;
 
     .row2 {
-      white-space: wrap !important;
+      white-space: pre-wrap !important;
     }
 
     .actions {
